- Fixed Extra values not being properly translated for Cyberware when printed. Closes #3990
- Adept Power Way Discounts are now properly limited to MAG /2. Closes #3618
- Fixed search filtering not working properly in the Weapon Accessory selection window.
- Fixed an issue with cyberware upgrades not respecting the 'free' choice from the cyberwater selector.
Fixed Reflex Recorder Optimisation only selecting the first reflex recorder to compare for defaulting bonuses.

Application Changes:
- Added a new improvement type to allow qualities to become free. Used to supplant existing code that flags the Mentor Spirit as free with certain qualities. 
- Added a new improvement type to disable qualities and their associated bonuses. Has limited support for use in the UI at the moment, and only refreshes on load or when other qualities are removed or added. 
- The Character Roster's Watch Folder now includes subfolders. 
- Added support for Priority mode using non-ABCDE arrays.
- Spells, rituals and preparations now count down from maximum, in the same way as other counters in create mode.
- Added a new improvement type that can disable a skill group selected by the user. To be used by RunnerHub customdata ruleset. 
- Added a new improvement type that governs whether a character can become a cyberzombie. Customdata has been provided to apply this to the Flashback System from Chrome Flesh.
- Power Foci and Spellcasting Foci now only provide the highest of their dicepool to a given spell's dicepool per SR5 318. Implemented by https://github.com/MemeticContagion